--- a/style/main.scss
+++ b/style/main.scss
@@ -656,6 +656,23 @@
     mask-position: center;
     mask-image: url("data:image/svg+xml,%3Csvg width='24' height='24' stroke='black' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cg transform-origin='center'%3E%3Ccircle cx='12' cy='12' r='9.5' fill='none' stroke-width='3' stroke-linecap='round'%3E%3CanimateTransform attributeName='transform' type='rotate' from='0 12 12' to='360 12 12' dur='2s' repeatCount='indefinite'/%3E%3Canimate attributeName='stroke-dasharray' values='0,150;42,150;42,150' keyTimes='0;0.475;1' dur='1.5s' repeatCount='indefinite'/%3E%3Canimate attributeName='stroke-dashoffset' values='0;-16;-59' keyTimes='0;0.475;1' dur='1.5s' repeatCount='indefinite'/%3E%3C/circle%3E%3C/g%3E%3C/svg%3E");
   }
+  .validator {
+    &:user-valid, &:has(:user-valid) {
+      &, &:focus, &:checked, &[aria-checked="true"], &:focus-within {
+        --input-color: var(--color-success);
+      }
+    }
+    &:user-invalid, &:has(:user-invalid), &[aria-invalid]:not([aria-invalid="false"]) {
+      &, &:focus, &:checked, &[aria-checked="true"], &:focus-within {
+        --input-color: var(--color-error);
+      }
+      & ~ .validator-hint {
+        visibility: visible;
+        display: block;
+        color: var(--color-error);
+      }
+    }
+  }
   .invisible {
     visibility: hidden;
   }
@@ -1683,6 +1700,9 @@
       cursor: not-allowed;
     }
   }
+  .isolate {
+    isolation: isolate;
+  }
   .stack {
     display: inline-grid;
     grid-template-columns: 3px 4px 1fr 4px 3px;
@@ -2024,6 +2044,14 @@
       background-image: none;
     }
   }
+  .fieldset {
+    display: grid;
+    gap: calc(0.25rem * 1.5);
+    padding-block: calc(0.25rem * 1);
+    font-size: 0.75rem;
+    grid-template-columns: 1fr;
+    grid-auto-rows: max-content;
+  }
   .card-title {
     display: flex;
     align-items: center;
@@ -2135,6 +2163,9 @@
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
+  .h-10 {
+    height: calc(var(--spacing) * 10);
+  }
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
@@ -2143,6 +2174,9 @@
   }
   .h-28 {
     height: calc(var(--spacing) * 28);
+  }
+  .h-36 {
+    height: calc(var(--spacing) * 36);
   }
   .h-fit {
     height: fit-content;
@@ -2714,9 +2748,6 @@
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
   }
-  .pt-0\.5 {
-    padding-top: calc(var(--spacing) * 0.5);
-  }
   .pt-1 {
     padding-top: calc(var(--spacing) * 1);
   }
@@ -2731,9 +2762,6 @@
   }
   .pr-2 {
     padding-right: calc(var(--spacing) * 2);
-  }
-  .pb-1 {
-    padding-bottom: calc(var(--spacing) * 1);
   }
   .pb-1\.5 {
     padding-bottom: calc(var(--spacing) * 1.5);
@@ -2865,9 +2893,6 @@
   .text-white {
     color: var(--color-white);
   }
-  .lowercase {
-    text-transform: lowercase;
-  }
   .italic {
     font-style: italic;
   }
@@ -2905,6 +2930,10 @@
       outline: 2px solid transparent;
       outline-offset: 2px;
     }
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
@@ -3230,11 +3259,6 @@
     @media (width >= 64rem) {
       font-size: var(--text-sm);
       line-height: var(--tw-leading, var(--text-sm--line-height));
-    }
-  }
-  .\32 xl\:h-32 {
-    @media (width >= 96rem) {
-      height: calc(var(--spacing) * 32);
     }
   }
   .\33 xl\:w-2\/5 {
@@ -3974,6 +3998,109 @@
       width: calc(var(--spacing) * 100);
     }
   }
+  .input_outline_primary {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+    outline-color: var(--color-primary);
+    &:focus-within {
+      outline-style: var(--tw-outline-style);
+      outline-width: 2px;
+    }
+  }
+  .input_outline_error {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+    outline-color: var(--color-error);
+    &:focus-within {
+      outline-style: var(--tw-outline-style);
+      outline-width: 2px;
+    }
+  }
+  .input_border_primary {
+    border-radius: 0;
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-color: var(--color-primary);
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+    outline-style: var(--tw-outline-style);
+    outline-width: 0px;
+    outline-offset: 0px;
+    outline-color: var(--color-primary);
+    &:focus-within {
+      outline-style: var(--tw-outline-style);
+      outline-width: 1px;
+    }
+  }
+  .input_border_error {
+    border-radius: 0;
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-color: var(--color-error);
+    padding: calc(var(--spacing) * 3);
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+    outline-style: var(--tw-outline-style);
+    outline-width: 0px;
+    outline-offset: 0px;
+    outline-color: var(--color-error);
+    &:focus-within {
+      outline-style: var(--tw-outline-style);
+      outline-width: 1px;
+    }
+  }
+  .input_primary {
+    border-radius: 0;
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-color: var(--color-primary);
+    padding: calc(var(--spacing) * 3);
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+    outline-style: var(--tw-outline-style);
+    outline-width: 0px;
+    outline-offset: 0px;
+    outline-color: var(--color-primary);
+    &:focus-within {
+      outline-style: var(--tw-outline-style);
+      outline-width: 1px;
+    }
+  }
+  .input_error {
+    border-radius: 0;
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-color: var(--color-error);
+    padding: calc(var(--spacing) * 3);
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+    outline-style: var(--tw-outline-style);
+    outline-width: 0px;
+    outline-offset: 0px;
+    outline-color: var(--color-error);
+    &:focus-within {
+      outline-style: var(--tw-outline-style);
+      outline-width: 1px;
+    }
+  }
 }
 .spoiler-checkbox:checked + .spoiler-text {
   background-color: black;
@@ -4421,6 +4548,11 @@ textarea::-webkit-scrollbar {
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -4580,6 +4712,7 @@ textarea::-webkit-scrollbar {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
