--- a/style/main.scss
+++ b/style/main.scss
@@ -2044,14 +2044,6 @@
       background-image: none;
     }
   }
-  .fieldset {
-    display: grid;
-    gap: calc(0.25rem * 1.5);
-    padding-block: calc(0.25rem * 1);
-    font-size: 0.75rem;
-    grid-template-columns: 1fr;
-    grid-auto-rows: max-content;
-  }
   .card-title {
     display: flex;
     align-items: center;
@@ -2383,6 +2375,9 @@
   .list-disc {
     list-style-type: disc;
   }
+  .appearance-none {
+    appearance: none;
+  }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2694,6 +2689,18 @@
   .bg-yellow-600 {
     background-color: var(--color-yellow-600);
   }
+  .bg-\[url\(\'\/svg\/arrow_down\.svg\'\)\] {
+    background-image: url('/svg/arrow_down.svg');
+  }
+  .bg-\[length\:12px_12px\] {
+    background-size: 12px 12px;
+  }
+  .bg-position-\[center_right_1rem\] {
+    background-position: center right 1rem;
+  }
+  .bg-no-repeat {
+    background-repeat: no-repeat;
+  }
   .object-contain {
     object-fit: contain;
   }
@@ -2762,6 +2769,9 @@
   }
   .pr-2 {
     padding-right: calc(var(--spacing) * 2);
+  }
+  .pr-8 {
+    padding-right: calc(var(--spacing) * 8);
   }
   .pb-1\.5 {
     padding-bottom: calc(var(--spacing) * 1.5);
@@ -2880,6 +2890,12 @@
   .checkbox-primary {
     color: var(--color-primary-content);
     --input-color: var(--color-primary);
+  }
+  .text-base-content\/50 {
+    color: var(--color-base-content);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-base-content) 50%, transparent);
+    }
   }
   .text-black {
     color: var(--color-black);
@@ -4045,9 +4061,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
     border-color: var(--color-error);
-    padding: calc(var(--spacing) * 3);
-    font-size: var(--text-sm);
-    line-height: var(--tw-leading, var(--text-sm--line-height));
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
     outline-style: var(--tw-outline-style);
