Input checks: start adding input checks in browser for sphere management

--- a/style/main.scss
+++ b/style/main.scss
@@ -2933,6 +2933,9 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .\!outline-offset-0 {
+    outline-offset: 0px !important;
+  }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
