--- a/input.css
+++ b/input.css
@@ -234,16 +234,16 @@
     .left_sidebar_base_class {
         @apply
             flex flex-col justify-between gap-1
-            shrink-0 w-50 xl:w-60 2xl:w-80 3xl:w-100 h-full
+            shrink-0 w-60 lg:w-56 xl:w-65 2xl:w-80 3xl:w-100 h-full
             overflow-y-auto
-            p-2
+            p-1 2xl:p-2
             max-lg:bg-base-300 max-lg:absolute max-lg:z-1 max-lg:top-0 max-lg:left-0;
     }
 
     .right_sidebar_base_class {
         @apply
             flex flex-col justify-start gap-2
-            shrink-0 w-50 xl:w-60 2xl:w-80 3xl:w-100 h-full
+            shrink-0 w-60 lg:w-56 xl:w-65 2xl:w-80 3xl:w-100 h-full
             overflow-y-auto
             px-3 py-2
             max-lg:bg-base-300 max-lg:absolute max-lg:z-1 max-lg:top-0 max-lg:right-0;
