Add help button for links and faq entry for images

--- a/style/main.scss
+++ b/style/main.scss
@@ -2329,8 +2329,8 @@
   .origin-bottom-left {
     transform-origin: bottom left;
   }
-  .origin-top-right {
-    transform-origin: top right;
+  .origin-top-left {
+    transform-origin: top left;
   }
   .rotate-90 {
     rotate: 90deg;
