Open categories dropdown above button

--- a/style/main.scss
+++ b/style/main.scss
@@ -1514,6 +1514,9 @@
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
+  .bottom-full {
+    bottom: 100%;
+  }
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
@@ -1936,9 +1939,6 @@
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
   }
-  .mt-2 {
-    margin-top: calc(var(--spacing) * 2);
-  }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
@@ -1947,6 +1947,9 @@
   }
   .mb-1 {
     margin-bottom: calc(var(--spacing) * 1);
+  }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
   }
   .box-border {
     box-sizing: border-box;
@@ -2331,9 +2334,6 @@
   }
   .grow {
     flex-grow: 1;
-  }
-  .origin-bottom {
-    transform-origin: bottom;
   }
   .origin-bottom-left {
     transform-origin: bottom left;
