--- a/input.css
+++ b/input.css
@@ -231,6 +231,9 @@
         @apply h-5 w-5 lg:h-7 lg:w-7 my-2 lg:my-5;
     }
 
+    .link-icon-size {
+        @apply h-4 w-4 lg:h-5 lg:w-5;
+    }
     .left_sidebar_base_class {
         @apply
             flex flex-col justify-between gap-1
