--- a/style/main.scss
+++ b/style/main.scss
@@ -3988,6 +3988,16 @@
       width: calc(var(--spacing) * 7);
     }
   }
+  .link-icon-size {
+    height: calc(var(--spacing) * 4);
+    width: calc(var(--spacing) * 4);
+    @media (width >= 64rem) {
+      height: calc(var(--spacing) * 5);
+    }
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 5);
+    }
+  }
   .left_sidebar_base_class {
     display: flex;
     height: 100%;
