Improve notification list, need to add styling for unread notifications, read one/all buttons, read notification upon clicking, add notification in browser, avoid self notification if possible

--- a/style/main.scss
+++ b/style/main.scss
@@ -3020,6 +3020,13 @@
       }
     }
   }
+  .hover\:bg-base-300 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-base-300);
+      }
+    }
+  }
   .hover\:bg-base-content\/20 {
     &:hover {
       @media (hover: hover) {
